--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "start": "node ./build/bin/www",
     "startdev": "nodemon --exec babel-node ./src/bin/www",
     "lint": "./node_modules/.bin/eslint ./src",
-    "pretty": "prettier --write '**/*.{js,json}' '!node_modules/**'","postpretty": "npm lint --fix"
+    "pretty": "prettier --write '**/*.{js,json}' '!node_modules/**'",
+    "postpretty": "npm run lint --fix",
+    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha -r @babel/register",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
+
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
@@ -24,10 +29,16 @@
     "@babel/preset-env": "^7.14.8",
     "@babel/register": "^7.14.5",
     "@babel/runtime": "^7.14.8",
+    "chai": "^4.3.4",
+    "coveralls": "^3.1.1",
     "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
+    "mocha": "^9.0.3",
     "nodemon": "^2.0.12",
-    "prettier": "^2.3.2"
+    "nyc": "^15.1.0",
+    "prettier": "^2.3.2",
+    "sinon-chai": "^3.7.0",
+    "supertest": "^6.1.4"
   }
 }
